--- a/src/main/webapp/js/app/components/header/header.html
+++ b/src/main/webapp/js/app/components/header/header.html
@@ -17,14 +17,17 @@
                 <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/tipousuario')}">
                     <a class="nav-link" href="tipousuario/plist">Tipousuario</a>
                 </li>
-                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/factura')}">
-                    <a class="nav-link" href="factura/plist">Factura</a>
-                </li>
                 <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/producto')}">
                     <a class="nav-link" href="producto/plist">Producto</a>
                 </li>
                 <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/tipoproducto')}">
                     <a class="nav-link" href="tipoproducto/plist">Tipoproducto</a>
+                </li>
+                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/factura')}">
+                    <a class="nav-link" href="factura/plist">Factura</a>
+                </li>
+                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/linea')}">
+                    <a class="nav-link" href="linea/plist">Linea</a>
                 </li>
             </ul>
             <ul class="navbar-nav justify-content-end" id="navbarCollapse" style="border: 1px solid black; border-radius: 7px;">
