--- a/src/main/webapp/css/mio.css
+++ b/src/main/webapp/css/mio.css
@@ -22,4 +22,45 @@
     width: 15%;
 }
 
+.productos{
+    display: grid;
+    grid-template-columns: repeat(3,220px);     
+    grid-auto-rows: 1fr;
+    grid-gap: 50px 10%;
+    padding: 10px;    
+    justify-content: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    background: rgba(108,158,237,0.4);
+    border-radius: 50px;
+    padding: 20px;
+}
+.producto{
+    border: 1px solid black;   
+    display: grid;
+    grid-template-rows: 200px 30px 30px 35px; 
+    border-radius: 10px 50px 10px 50px;
+    box-shadow: 5px 0px 20px grey;
+    padding: 10px;
+    text-align: center;
+    transition: transform 1s;
+    background: white;
+}
+
+.producto:hover{
+    transform: scale(1.2);
+}
+
+.comprar{
+    background: rgba(241,121,3,0.71);
+}
+
+.carritoIcon{
+    color: rgba(241,121,3,0.71);
+    font-size: 20px;
+}
+
+.carritoIcon:hover{
+    // animacion de que se mueva.
+}
 
