--- a/src/main/webapp/js/app/components/header/header.html
+++ b/src/main/webapp/js/app/components/header/header.html
@@ -1,49 +1,52 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="home">TROLLEYES</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+    <a class="navbar-brand" href="home">TROLLEYES</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
             aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item glyphicon glyphicon-home" ng-class="{'active': c.isActive('/home')}">
-                    <a class="nav-link" href="/home"><i class="fas fa-home"></i> Home</a>
-                </li>
-    
-                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/usuario')}">
-                    <a class="nav-link" href="usuario/plist"><i class="fas fa-user-tie"></i> Usuario</a>
-                </li>
-                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/tipousuario')}">
-                    <a class="nav-link" href="tipousuario/plist"><i class="fas fa-users-cog"></i> Tipousuario</a>
-                </li>
-                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/producto')}">
-                    <a class="nav-link" href="producto/plist"><i class="fas fa-box"></i> Producto</a>
-                </li>
-                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/tipoproducto')}">
-                    <a class="nav-link" href="tipoproducto/plist"><i class="fas fa-boxes"></i> Tipoproducto</a>
-                </li>
-                <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/factura')}">
-                    <a class="nav-link" href="factura/plist"><i class="fas fa-file-invoice"></i> Factura</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav justify-content-end" id="navbarCollapse" style="border: 1px solid black; border-radius: 7px;">
-                <li class="nav-item">
-                    <div class="dropdown" ng-show="c.logged">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            {{c.name}}
-                        </button>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="usuario/view/{{c.idUserLogged}}">Perfil</a>
-                            <hr />
-                            <a class="dropdown-item" href="usuario/logout">Loggout</a>
-                        </div>
-                    </div>
-                </li>
-                <li class="nav-item" ng-class="{'active': c.isActive('/login')}" ng-show="!c.logged">
-                    <a class="nav-link" href="usuario/login">Login</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item glyphicon glyphicon-home" ng-class="{'active': c.isActive('/home')}">
+                <a class="nav-link" href="/home"><i class="fas fa-home"></i> Home</a>
+            </li>
+
+            <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/usuario')}">
+                <a class="nav-link" href="usuario/plist"><i class="fas fa-user-tie"></i> Usuario</a>
+            </li>
+            <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/tipousuario')}">
+                <a class="nav-link" href="tipousuario/plist"><i class="fas fa-users-cog"></i> Tipousuario</a>
+            </li>
+            <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/producto')}">
+                <a class="nav-link" href="producto/plist"><i class="fas fa-box"></i> Producto</a>
+            </li>
+            <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/tipoproducto')}">
+                <a class="nav-link" href="tipoproducto/plist"><i class="fas fa-boxes"></i> Tipoproducto</a>
+            </li>
+            <li ng-show="c.logged" class="nav-item" ng-class="{'active': c.isActive('/factura')}">
+                <a class="nav-link" href="factura/plist"><i class="fas fa-file-invoice"></i> Factura</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav justify-content-end" id="navbarCollapse" style="border: 1px solid black; border-radius: 7px;">
+            <li class="nav-item">
+            <li ng-show="c.logged" class="nav-item">
+                <a class="nav-link" href="carrito/plist"><i class="fas fa-shopping-cart carritoIcon"></i></a>
+            </li>
+            <div class="dropdown" ng-show="c.logged">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                    {{c.name}}
+                </button>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="usuario/view/{{c.idUserLogged}}">Perfil</a>
+                    <hr />
+                    <a class="dropdown-item" href="usuario/logout">Loggout</a>
+                </div>
+            </div>
+            </li>
+            <li class="nav-item" ng-class="{'active': c.isActive('/login')}" ng-show="!c.logged">
+                <a class="nav-link" href="usuario/login">Login</a>
+            </li>
+        </ul>
+    </div>
+</nav>
