--- a/src/main/webapp/css/mio.css
+++ b/src/main/webapp/css/mio.css
@@ -24,7 +24,7 @@
 
 .productos{
     display: grid;
-    grid-template-columns: repeat(3,220px);     
+    grid-template-columns: repeat(auto-fill,220px);     
     grid-auto-rows: 1fr;
     grid-gap: 50px 10%;
     padding: 10px;    
@@ -98,3 +98,7 @@
 #itemAdd{grid-area: add;}
 #itemRed{grid-area: red;}
 #itemDel{grid-area: del;}
+#precioTotal{
+    font-size: 1.3em;
+    font-weight: bold;
+}
