Numero de productos que contiene el carrito añadido al header
Cuando se crea la factura YA SI te lleva a las facturas del usuario
(pero no a esa factura en concreto, meditar que opcion es mejor).

Falta hacer bien:
- Factura (fechas, modal y diseño).
- Lineas (modales y diseño).
- Cambiar diseño de todos los plists (maestros/esclavos, etc.).
- Hacer maestro/esclavo de tipo usuario y tipo producto.

--- a/src/main/webapp/css/mio.css
+++ b/src/main/webapp/css/mio.css
@@ -56,8 +56,12 @@
 }
 
 .carritoIcon{
-    color: rgba(241,121,3,0.71);
-    font-size: 20px;
+    color: rgba(255,176,30,1);
+    font-size: 19px;
+}
+
+.carritoNum{
+    color: rgba(255,176,30,1);
 }
 
 .carritoIcon:hover{
