--- a/src/main/webapp/js/app/components/header/header.html
+++ b/src/main/webapp/js/app/components/header/header.html
@@ -27,10 +27,13 @@
                 <a class="nav-link" href="factura/plist"><i class="fas fa-file-invoice"></i> Factura</a>
             </li>
         </ul>
-        <ul class="navbar-nav justify-content-end" id="navbarCollapse" style="border: 1px solid black; border-radius: 7px;">
+        <ul class="navbar-nav justify-content-end" id="navbarCollapse">
             <li class="nav-item">
             <li ng-show="c.logged" class="nav-item">
-                <a class="nav-link" href="carrito/plist"><i class="fas fa-shopping-cart carritoIcon"></i></a>
+                <a class="nav-link" href="carrito/plist">
+                    <i class="fas fa-shopping-cart carritoIcon"></i>
+                    <span class="carritoNum" ng-show="c.carrito > 0">{{c.carrito}}</span>
+                </a>
             </li>
             <div class="dropdown" ng-show="c.logged">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
