pongo existencias en productos/plist_carrito y en el carrito. Arreglo de diseño en plist_carrito cuando hay descripciones muy grandes.
Manejo de fechas implementado (he debido bajar version de angular, no 
mola), el datepicker al editar factura sale en rojo, mirar bien
validaciones en cliente.

Cuando se crea la factura YA SI te lleva a las facturas del usuario
(pero no a esa factura en concreto, meditar que opcion es mejor).

Falta hacer bien:
- Factura (fechas, modal y diseño).
- Lineas (modales y diseño).
- Cambiar diseño de todos los plists (maestros/esclavos, etc.).
- Hacer maestro/esclavo de tipo usuario y tipo producto.
- Subir fotos.
- Generar pdf de la factura al comprar.
- Gestion de permisos de usuarios (admin, cliente, etc.).

--- a/src/main/webapp/css/mio.css
+++ b/src/main/webapp/css/mio.css
@@ -26,19 +26,20 @@
     display: grid;
     grid-template-columns: repeat(auto-fill,220px);     
     grid-auto-rows: 1fr;
-    grid-gap: 50px 10%;
+    grid-gap: 50px 8%;
     padding: 10px;    
     justify-content: center;
     margin-bottom: 30px;
     margin-top: 30px;
     background: rgba(108,158,237,0.4);
     border-radius: 50px;
-    padding: 20px;
+    padding: 30px;
 }
 .producto{
     border: 1px solid black;   
     display: grid;
-    grid-template-rows: 200px 30px 30px 35px; 
+    grid-template-rows: 200px auto-fill; 
+    grid-gap: 15px 5%;
     border-radius: 10px 50px 10px 50px;
     box-shadow: 5px 0px 20px grey;
     padding: 10px;
@@ -90,13 +91,15 @@
     grid-template-columns: repeat(3,1fr);
     grid-template-rows:1fr 1fr 1fr;
     grid-template-areas: 
-        "img desc add"
+        "img desc ."
+        "img exis add"
         "img cant red"
         "img prec del"
 }
 
 #itemImagen{grid-area: img;}
 #itemDesc{grid-area: desc;}
+#itemExis{grid-area: exis;}
 #itemCant{grid-area: cant;}
 #itemPrecio{grid-area: prec;}
 #itemAdd{grid-area: add;}
